--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -1,51 +1,50 @@
-<html>
-    <html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       
-        <link rel="stylesheet" href="travel_recommendation.css">
-        <title>
-            EXPLORE THE WORLD
-        </title>
-
-    </head>
-    <body>
-        <header class="navbar">
-          <div class="logo">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="travel_recommendation.css">
+    <title>EXPLORE THE WORLD</title>
+</head>
+<body>
+    <header class="navbar">
+        <div class="logo">
             <span>Noelle's Travel</span>
-         </div>
-
-    <nav class="nav-links">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
+        </div>
+        <nav class="nav-links">
+            <ul>
+                <li><a href="travel_recommendation.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
         <div class="search-container">
-            <input type="text" class="search-input" placeholder="Enter a destination or keyword" />
+            <input type="text" class="search-input" placeholder="Search destinations, activities, or hotels..." />
             <button class="search-btn">Search</button>
             <button class="clear-btn">Clear</button>
         </div>
-        </header>
-        
-        <div id="results"></div>
+    </header>
 
-    <div class="intro-section">
+    <section class="hero-section">
+        <h1>EXPLORE DREAM DESTINATIONS</h1>
+        <p>Discover breathtaking locations and plan your next adventure with ease using our navigational tools!</p>
         <div class="social-icons">
             <a href="https://facebook.com" target="_blank"><img src="https://cdn.pixabay.com/photo/2021/06/15/12/51/facebook-6338508_960_720.png" alt="Facebook"></a>
             <a href="https://twitter.com" target="_blank"><img src="https://e7.pngegg.com/pngimages/708/311/png-clipart-icon-logo-twitter-logo-twitter-logo-blue-social-media-thumbnail.png" alt="Twitter"></a>
             <a href="https://instagram.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/1200px-Instagram_icon.png" alt="Instagram"></a>
         </div>
-        <h1>EXPLORE DREAM DESTINATIONS</h1>
-        <p class="intro-description">Explore impeccable locations with our easy to use, navigational website for travelers like yourself! Check out our locations in the destination search bar!</p>
-    </div>
+    </section>
+
+    <section class="featured-destinations">
+        <h2>Featured Destinations</h2>
+        <div class="destination-grid" id="featured-grid"></div>
+    </section>
+
+    <section class="search-results" id="results">
+        <h2>Search Results</h2>
+        <div class="results-container"></div>
+    </section>
 
     <script src="travel_recommendation.js"></script>
-
 </body>
-
-
-
 </html>
