--- a/about.html
+++ b/about.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Travel</title>
+    <title>About Us - Noelle's Travel</title>
     <link rel="stylesheet" href="travel_recommendation.css">
 </head>
-<body>
-    <header>
-        <h1>About Us</h1>
+<body class="about-page">
+    <header class="navbar">
+        <a href="travel_recommendation.html" class="back-arrow">← Back</a>
+        <div class="logo"><span>Noelle's Travel</span></div>
+        <nav class="nav-links">
+            <ul>
+                <li><a href="travel_recommendation.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
     </header>
-        <body class="about-page">
 
     <section class="about">
-        
+        <div class="container">
+            <h1>About Us</h1>
+            <p>We’re passionate about making travel seamless and unforgettable. Noelle's Travel combines cutting-edge technology with expert curation to bring you the best destinations, activities, and accommodations worldwide.</p>
+        </div>
     </section>
 
     <section class="team">
@@ -21,19 +31,22 @@
             <h2>Meet the Team</h2>
             <div class="team-members">
                 <div class="member">
+                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Noelle" class="team-photo">
                     <h3>Noelle</h3>
                     <p><strong>Founder & CEO</strong></p>
                     <p>Passionate about adventure and cultural exploration, Noelle started this company to help travelers experience the world in the most seamless and memorable way.</p>
                 </div>
                 <div class="member">
+                    <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Clarissa" class="team-photo">
                     <h3>Clarissa</h3>
                     <p><strong>Vice President</strong></p>
                     <p>Clarissa ensures that our travel recommendations are curated with expert insight, making sure every trip is a once-in-a-lifetime experience.</p>
                 </div>
                 <div class="member">
+                    <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="John" class="team-photo">
                     <h3>John</h3>
                     <p><strong>Marketing Director</strong></p>
-                    <p>John brings destinations to life through creative storytelling and digital marketing strategies, helping us connect with fellow travelers worldwide.</p>
+                    <p>John brings destinations to life through creative storytelling and digital marketing strategies, connecting with travelers worldwide.</p>
                 </div>
             </div>
         </div>
