--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -25,9 +25,9 @@
         </div>
     </header>
 
-    <section class="hero-section">
+    <section class="intro-section">
         <h1>EXPLORE DREAM DESTINATIONS</h1>
-        <p>Discover breathtaking locations and plan your next adventure with ease using our navigational tools!</p>
+        <p class="intro-description">Explore impeccable locations with our easy-to-use, navigational website for travelers like yourself! Check out our locations in the destination search bar!</p>
         <div class="social-icons">
             <a href="https://facebook.com" target="_blank"><img src="https://cdn.pixabay.com/photo/2021/06/15/12/51/facebook-6338508_960_720.png" alt="Facebook"></a>
             <a href="https://twitter.com" target="_blank"><img src="https://e7.pngegg.com/pngimages/708/311/png-clipart-icon-logo-twitter-logo-twitter-logo-blue-social-media-thumbnail.png" alt="Twitter"></a>
