--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body class="about-page">
     <header class="navbar">
-        <a href="travel_recommendation.html" class="back-arrow">← Back</a>
+        <a href="travel_recommendation.html" class="back-arrow">← Back to Home</a>
         <div class="logo"><span>Noelle's Travel</span></div>
         <nav class="nav-links">
             <ul>
